--- a/source/index.html
+++ b/source/index.html
@@ -261,7 +261,9 @@
                   </svg>
                 </button>
               </div>
+              <!-- Slider main container -->
               <div class="tours__swiper swiper">
+                <!-- Additional required wrapper -->
                 <div class="tours__swiper-wrapper swiper-wrapper">
                   <!-- Slides -->
                   <div class="tours__swiper-slide tours__swiper-slide--caucasus swiper-slide">
@@ -562,7 +564,120 @@
               </a>
             </div>
           </div>
+
+          <div class="tours__background">
+            <picture>
+              <source type="image/webp" media="(max-width: 767px)" srcset="./img/clouds/clouds-mountain-mobile.webp 1x, ./img/clouds/clouds-mountain-mobile@2x.webp 2x" width="171" height="595">
+              <source type="image/webp" media="(max-width: 1199px)" srcset="./img/clouds/clouds-mountain-tablet.webp 1x, ./img/clouds/clouds-mountain-tablet@2x.webp 2x" width="602" height="1364">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="./img/clouds/clouds-mountain-desktop.webp 1x, ./img/clouds/clouds-mountain-desktop@2x.webp 2x" width="602" height="1630">
+              <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/clouds/clouds-mountain-mobile.jpg 1x, ./img/clouds/clouds-mountain-mobile@2x.jpg 2x" width="171" height="595">
+              <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/clouds/clouds-mountain-tablet.jpg 1x, ./img/clouds/clouds-mountain-tablet@2x.jpg 2x" width="602" height="1364">
+              <img src="./img/clouds/clouds-mountain-desktop.jpg" srcset="./img/clouds/clouds-mountain-desktop@2x.jpg 2x" type="image/jpeg" width="602" height="1630" alt="Облако.">
+            </picture>
+          </div>
         </section>
+
+        <section class="main__education education">
+          <div class="container">
+            <div class="education__wrapper">
+              <div class="education__text-wrapper" >
+                <div class="education__title-wrapper">
+                  <h2>Обучение</h2>
+                  <span>Обучение</span>
+                </div>
+                <p>
+                  Обучение проводится квалифицированными специалистами,
+                  за&nbsp;плечами которых десятки пройденных маршрутов Кавказа,
+                  Крыма, Гималаев, Эльбруса, Алтая, Карелии, Адыгеи и других.
+                </p>
+              </div>
+
+              <div class="education__instructors">
+                <h3>Ближайшие туры</h3>
+                <div class="education__swiper-buttons">
+                  <button class="education__swiper-button education__swiper-button--prev" type="button">
+                    <svg width="14" height="9">
+                      <use href="./img/sprite.svg#arrow-left"></use>
+                    </svg>
+                  </button>
+                  <button class="education__swiper-button education__swiper-button--next" type="button">
+                    <svg width="14" height="9">
+                      <use href="./img/sprite.svg#arrow-right"></use>
+                    </svg>
+                  </button>
+                </div>
+                <!-- Slider main container -->
+                <div class="education__swiper swiper">
+                  <!-- Additional required wrapper -->
+                  <div class="education__swiper-wrapper swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-1-tablet.webp 1x, ./img/trainers/trainer-1-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-1-laptop.webp 1x, ./img/trainers/trainer-1-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-1-desktop.webp 1x, ./img/trainers/trainer-1-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-1-mobile.jpg 1x, ./img/trainers/trainer-1-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-1-tablet.jpg 1x, ./img/trainers/trainer-1-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-1-laptop.jpg 1x, ./img/trainers/trainer-1-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-1-desktop.jpg" srcset="./img/trainers/trainer-1-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Александр Прокофьев.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Александр Прокофьев</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Строгий и внимательный инструктор,
+                          весёлый и общительный человек.
+                          Любит природу.
+                        </p>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="education__process">
+                <h3>Процесс обучения</h3>
+                <ul class="education__process-list">
+                  <li class="education__process-item education__process-item--map">
+                    <svg width="25" height="25">
+                      <use href="./img/sprite.svg#map"></use>
+                    </svg>
+                    <p>Изучение спортивного туристского движения</p>
+                  </li>
+                  <li class="education__process-item education__process-item--boots">
+                    <svg width="26" height="25">
+                      <use href="./img/sprite.svg#boots"></use>
+                    </svg>
+                    <p>Подготовка и&nbsp;техническое снаряжение в&nbsp;походах</p>
+                  </li>
+                  <li class="education__process-item education__process-item--pine-tree">
+                    <svg width="26" height="25">
+                      <use href="./img/sprite.svg#pine-tree"></use>
+                    </svg>
+                    <p>Лекции по&nbsp;окружающей среде, экологии и&nbsp;гигиене</p>
+                  </li>
+                  <li class="education__process-item education__process-item--mountain">
+                    <svg width="25" height="25">
+                      <use href="./img/sprite.svg#mountain"></use>
+                    </svg>
+                    <p>Разъяснение сложности горных препятствий</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <section class="main__about-us about-us" id="about-us">
           <div class="container">
