--- a/source/index.html
+++ b/source/index.html
@@ -588,12 +588,12 @@
                 <p>
                   Обучение проводится квалифицированными специалистами,
                   за&nbsp;плечами которых десятки пройденных маршрутов Кавказа,
-                  Крыма, Гималаев, Эльбруса, Алтая, Карелии, Адыгеи и других.
+                  Крыма, Гималаев, Эльбруса, Алтая, Карелии, Адыгеи и&nbsp;других.
                 </p>
               </div>
 
               <div class="education__instructors">
-                <h3>Ближайшие туры</h3>
+                <h3>Наши инструкторы</h3>
                 <div class="education__swiper-buttons">
                   <button class="education__swiper-button education__swiper-button--prev" type="button">
                     <svg width="14" height="9">
@@ -626,7 +626,130 @@
                       </div>
                       <div class="education__info">
                         <div class="education__name-wrapper">
-                          <h4>Александр Прокофьев</h4>
+                          <h4>Александр <br> Прокофьев</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Строгий и внимательный инструктор,
+                          весёлый и&nbsp;общительный человек.
+                          Любит природу.
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-2-mobile.webp 1x, ./img/trainers/trainer-2-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-2-tablet.webp 1x, ./img/trainers/trainer-2-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-2-laptop.webp 1x, ./img/trainers/trainer-2-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-2-desktop.webp 1x, ./img/trainers/trainer-2-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-2-mobile.jpg 1x, ./img/trainers/trainer-2-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-2-tablet.jpg 1x, ./img/trainers/trainer-2-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-2-laptop.jpg 1x, ./img/trainers/trainer-2-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-2-desktop.jpg" srcset="./img/trainers/trainer-2-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Светлана Афиногенова.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Светлана <br>Афиногенова</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Видеть мир вокруг, познавать
+                          его&nbsp;опасности, находить друг друга,
+                          становиться ближе, чувствовать —
+                          в&nbsp;этом назначение жизни.
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-3-mobile.webp 1x, ./img/trainers/trainer-3-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-3-tablet.webp 1x, ./img/trainers/trainer-3-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-3-laptop.webp 1x, ./img/trainers/trainer-3-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-3-desktop.webp 1x, ./img/trainers/trainer-3-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-3-mobile.jpg 1x, ./img/trainers/trainer-3-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-3-tablet.jpg 1x, ./img/trainers/trainer-3-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-3-laptop.jpg 1x, ./img/trainers/trainer-3-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-3-desktop.jpg" srcset="./img/trainers/trainer-3-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Надежда Колесниченко.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Надежда <br> Колесниченко</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Участники говорят, что&nbsp;Надежда
+                          ответственная, приятная в общении,
+                          и&nbsp;в&nbsp;поездках с&nbsp;ней&nbsp;чувствуешь себя
+                          спокойно и уверенно.
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-4-mobile.webp 1x, ./img/trainers/trainer-4-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-4-tablet.webp 1x, ./img/trainers/trainer-4-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-4-laptop.webp 1x, ./img/trainers/trainer-4-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-4-desktop.webp 1x, ./img/trainers/trainer-4-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-4-mobile.jpg 1x, ./img/trainers/trainer-4-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-4-tablet.jpg 1x, ./img/trainers/trainer-4-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-4-laptop.jpg 1x, ./img/trainers/trainer-4-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-4-desktop.jpg" srcset="./img/trainers/trainer-4-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Федор Кайгородов.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Федор <br> Кайгородов</h4>
+                          <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
+                            <svg width="14" height="8">
+                              <use href="./img/sprite.svg#vk-icon"></use>
+                            </svg>
+                          </a>
+                        </div>
+                        <p>
+                          Опыт походов: Ходит в походы
+                          с&nbsp;2001&nbsp;года. В России побывал в горных
+                          районах Хибины, Архыз, много
+                          путешествует по Европе.
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="education__swiper-slide swiper-slide">
+                      <div class="education__img-wrapper">
+                        <picture>
+                          <source type="image/webp" media="(max-width: 767px)" srcset="./img/trainers/trainer-1-mobile.webp 1x, ./img/trainers/trainer-1-mobile@2x.webp 2x" width="290" height="200">
+                          <source type="image/webp" media="(max-width: 1023px)" srcset="./img/trainers/trainer-1-tablet.webp 1x, ./img/trainers/trainer-1-tablet@2x.webp 2x" width="183" height="200">
+                          <source type="image/webp" media="(max-width: 1199px)" srcset="./img/trainers/trainer-1-laptop.webp 1x, ./img/trainers/trainer-1-laptop@2x.webp 2x" width="268" height="200">
+                          <source type="image/webp" media="(min-width: 1200px)" srcset="./img/trainers/trainer-1-desktop.webp 1x, ./img/trainers/trainer-1-desktop@2x.webp 2x" width="255" height="200">
+                          <source media="(max-width: 767px)" type="image/jpeg" srcset="./img/trainers/trainer-1-mobile.jpg 1x, ./img/trainers/trainer-1-mobile@2x.jpg 2x" width="290" height="200">
+                          <source media="(max-width: 1023px)" type="image/jpeg" srcset="./img/trainers/trainer-1-tablet.jpg 1x, ./img/trainers/trainer-1-tablet@2x.jpg 2x" width="183" height="200">
+                          <source media="(max-width: 1199px)" type="image/jpeg" srcset="./img/trainers/trainer-1-laptop.jpg 1x, ./img/trainers/trainer-1-laptop@2x.jpg 2x" width="268" height="200">
+                          <img src="./img/trainers/trainer-1-desktop.jpg" srcset="./img/trainers/trainer-1-desktop@2x.jpg 2x" type="image/jpeg" width="255" height="200" alt="Тренер Александр Прокофьев.">
+                        </picture>
+                      </div>
+                      <div class="education__info">
+                        <div class="education__name-wrapper">
+                          <h4>Александр <br> Прокофьев</h4>
                           <a class="education__trainer-page" href="#" aria-label="Страница тренера в ВК.">
                             <svg width="14" height="8">
                               <use href="./img/sprite.svg#vk-icon"></use>
@@ -691,16 +814,16 @@
                   <h3>История компании</h3>
                   <p>
                     В далёком 2000 году мы начали заниматься туризмом — походы, поездки,
-                    восхождения, нам это настолько понравилось, что мы этим стали жить.
-                    Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
+                    восхождения, нам&nbsp;это&nbsp;настолько понравилось, что&nbsp;мы этим стали жить.
+                    Спустя&nbsp;5&nbsp;лет, в 2005 году мы основали компанию, чтобы&nbsp;показывать людям
                     удивительные места нашей страны.
                   </p>
                   <h3>Наша цель</h3>
                   <p>
-                    Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя
-                    все&nbsp;организационные вопросы. При&nbsp;организации мы обязательно учтём
-                    все ваши пожелания. Вам останется только наслаждаться незабываемым
-                    приключением в приятной компании.
+                    Подарить вам незабываемые впечатления от похода в горы. Мы&nbsp;берём на себя
+                    все&nbsp;организационные вопросы. При&nbsp;организации мы&nbsp;обязательно учтём
+                    все&nbsp;ваши пожелания. Вам&nbsp;останется только наслаждаться незабываемым
+                    приключением в&nbsp;приятной компании.
                   </p>
                 </div>
               </div>
@@ -763,8 +886,8 @@
                       </p>
                       <p>
                         С уверенностью могу сказать, что жизнь
-                        разделилась на до этого и после. Ещё никогда
-                        не&nbsp;отдыхал так душой и телом. Всем очень
+                        разделилась на до этого и после. Ещё&nbsp;никогда
+                        не&nbsp;отдыхал так душой и&nbsp;телом. Всем очень
                         рекомендую!
                       </p>
                       <h3>Фролов Александр</h3>
