--- a/source/index.html
+++ b/source/index.html
@@ -100,23 +100,26 @@
                     </p>
                     <a href="#" class="hero__btn btn">Смотреть тур</a>
                     <div class="hero__video-wrapper">
-                      <div class="hero__video video">
-                        <a class="video__link" href="https://youtu.be/9TZXsZItgdw">
-                          <picture>
-                            <source srcset="https://i.ytimg.com/vi_webp/9TZXsZItgdw/maxresdefault.webp" type="image/webp">
-                            <img class="video__media" src="https://i.ytimg.com/vi/9TZXsZItgdw/maxresdefault.jpg"  width="482" height="317" alt="Видео фитнес-центра SUPERGYM.">
-                          </picture>
-                          <div class="video__poster">
-                            <picture>
-                              <source media="(max-width: 1119px)" type="image/webp" srcset="./img/poster-video-tablet.webp 1x, ./img/poster-video-tablet@2x.webp 2x" width="442" height="300">
-                              <source media="(min-width: 1440px)" type="image/webp" srcset="./img/poster-video.webp 1x, ./img/poster-video@2x.webp 2x" width="482" height="317">
-                              <source media="(max-width: 1119px)" type="image/jpeg" srcset="./img/poster-video-tablet.jpg 1x, ./img/poster-video-tablet@2x.jpg 2x" width="442" height="300">
-                              <img src="./img/poster-video.jpg" srcset="./img/poster-video.jpg 1x, ./img/poster-video@2x.jpg 2x" width="482" height="317" alt="Постер к видео о Кавказе.">
-                            </picture>
-                          </div>
-                        </a>
-                        <button class="video__button" type="button" aria-label="Запустить видео."></button>
+                      <div class="hero__video-poster" data-poster>
+                        <picture>
+                          <source media="(max-width: 1119px)" type="image/webp" srcset="./img/poster-video-tablet.webp 1x, ./img/poster-video-tablet@2x.webp 2x" width="442" height="300">
+                          <source media="(min-width: 1440px)" type="image/webp" srcset="./img/poster-video.webp 1x, ./img/poster-video@2x.webp 2x" width="482" height="317">
+                          <source media="(max-width: 1119px)" type="image/jpeg" srcset="./img/poster-video-tablet.jpg 1x, ./img/poster-video-tablet@2x.jpg 2x" width="442" height="300">
+                          <img src="./img/poster-video.jpg" srcset="./img/poster-video.jpg 1x, ./img/poster-video@2x.jpg 2x" width="482" height="317" alt="Постер к видео о Кавказе.">
+                        </picture>
                       </div>
+                      <iframe width="482" height="317" data-video
+                        title="YouTube video player"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                        loading="lazy"
+                        tabindex="-1">
+                      </iframe>
+                      <button class="hero__video-button" data-video-play aria-label="Запустить видео.">
+                        <svg width="12" height="22">
+                          <use href="img/sprite.svg#video-button"></use>
+                        </svg>
+                      </button>
                     </div>
                     <div class="hero__desc">
                       <span>
@@ -213,8 +216,10 @@
                     </p>
                     <a href="#" class="hero__btn btn">Смотреть тур</a>
                     <div class="hero__audio-wrapper">
-                      <iframe frameborder="0" style="border:none;width:340px;height:220px;" width="340" height="220"
-                        src="https://music.yandex.ru/iframe/album/25474374" loading="lazy">
+                      <iframe frameborder="0"
+                        width="340" height="220"
+                        src="https://music.yandex.ru/iframe/album/25474374"
+                        loading="lazy">
                         Слушайте <a href='https://music.yandex.ru/album/25474374'>Про код</a> на Яндекс Музыке
                       </iframe>
                     </div>
